@@ -143,19 +143,6 @@ a:hover{
   top: 1.5rem
 }
 
-.categories {
-  padding: 0;
-  list-style-type: none;
-}
-.categories a {
-  display: flex;
-  padding: 1rem;
-}
-
-.categories a:hover {
-  background-color: #c0c0c0;
-}
-
 /* Product Details */
 .details{
   display: flex;
@@ -422,3 +409,37 @@ tbody>tr:nth-child(odd){
 .dropdown:hover .dropdown-content{
   display: block;
 } 
+
+/* Filter */
+
+.filter{
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 1rem auto;
+  max-width: 45rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.filter input,
+.filter button,
+.filter select{
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border:.1rem #c0c0c0 solid;
+  font-size: 1.6rem;
+
+}
+.categories{
+
+  padding: 0;
+  list-style-type: none;
+}
+.categories a{
+  display: flex;
+  padding: 1rem;
+}
+
+.categories a:hover{
+  background-color: #c0c0c0;
+}
