@@ -6,11 +6,12 @@ import { PRODUCT_LIST_REQUEST, PRODUCT_LIST_SUCCESS,
          PRODUCT_SAVE_FAIL, PRODUCT_DELETE_REQUEST,
          PRODUCT_DELETE_SUCCESS, PRODUCT_DELETE_FAIL} from "../types/productConstants"
 
-const listProducts = () => async (dispatch) => {
+const listProducts = (category = '', searchKeyword = '', sortOrder = '') => async (dispatch) => {
   try {
 
     dispatch({ type: PRODUCT_LIST_REQUEST });
-    const { data } = await axios.get("/api/products");
+    const { data } = await axios.get("/api/products?category=" + category +
+      "&searchKeyword=" + searchKeyword + "&sortOrder=" + sortOrder);
     dispatch({ type: PRODUCT_LIST_SUCCESS, payload: data });
   }
   catch (error) {
