@@ -7,6 +7,14 @@ All notable changes to this project will be documented in this file.
 - Additional routes for orders.
 - Redux for orders page.
 - Styles for admin options.
+- Sorting by category and name.
+
+### Changed
+- Order action.
+- Home page.
+
+### Removed
+- Console logs.
 
 ## [0.4.0] - 2020-08-20
 ### Added
